# gzbdb

./: Cargo.toml  README.md
actor/: Cargo.toml
actor/src/: main.rs  server.rs
actor_tester/: Cargo.toml
gmessage/: Cargo.toml
gmessage/src/: common.rs  io.rs  lib.rs  main.rs  messenger.rs  util.rs
gmessage/src/client/: auth.rs  ipc.rs  mod.rs  runner.rs
gmessage/src/crypt/: aes.rs  mod.rs  rsa.rs  sign.rs
gmessage/src/query/: mod.rs  request.rs  response.rs
gmessage/src/server/: ipc.rs  mod.rs
gmessage/src/server/channel/: mod.rs
gmessage/src/server/entry/: mod.rs
gmessage/src/server/message/: mod.rs
gmessage/src/v0/client/: config.rs  io copy.rs  io.rs  io_stand_alone.rs  ipc copy.rs  ipc.rs  mod.rs  runner copy.rs  runner.rs
gmessage/src/v0/server/: config.rs  ipc.rs  mod.rs  mod_mspc.rs
gmessage/src/v1/client/: auth.rs  book.rs  config.rs  ipc.rs  mod.rs  reader.rs  request.rs  response.rs  writer.rs
gmessage/src/v1/server/: entry.rs  executer copy.rs  executer.rs  ipc.rs  mod.rs  reader.rs  writer.rs
gmessage/src/v2/client/: config.rs  ipc.rs  mod.rs  reader.rs  request copy.rs  request.rs  response.rs  writer.rs
gmessage/src/v2/server/: entry.rs  executer.rs  mod.rs  reader.rs  writer.rs
gmessage/src/v3/client/: config.rs  ipc.rs  mod.rs  reader.rs  request.rs  response.rs  writer.rs
gmessage/src/v3/server/: entry.rs  executer.rs  ipc.rs  reader.rs  writer.rs
gmessage/src/v4/: mod.rs
gmessage/src/v4/client/: config.rs  ipc.rs  mod.rs  reader.rs  request copy 2.rs  request.rs  response.rs  writer.rs
gmessagetest/client/: Cargo.toml
gmessagetest/client/src/: main copy.rs  main.rs
iobox/: Cargo.toml
iobox/src/: builder.rs  controller.rs  ipc.rs  main.rs
(+53 files in other folders)
