[package]
name = "client"
version = "0.1.0"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gobject = { path = "../../gobject" }
gmessage = { path = "../../gmessage" }
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3.14"